Fix features not being aligned and the text "Used by churches worldwide" not fitting on one row in some translations

--- a/themes/openlp2v2/assets/css/custom.css
+++ b/themes/openlp2v2/assets/css/custom.css
@@ -55,6 +55,11 @@ div.post-heading h1 {
     text-shadow: 1px 1px 2px #000;
 }
 
+div#feature-details div.row {
+  margin-bottom: 5px;
+  margin-top: 5px;
+}
+
 div.product-chooser div.product-chooser-item {
     padding: 11px;
     border-radius: 6px;
